Save/Update files [ci skip]

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -3242,7 +3242,7 @@
  flavor_ara.EVTDESC3:0 "イタリアの詩人であり、教会法の法律家、学者、外交官、そして歴史家であるアントーニオ・ベッカデッリは、現在、$COUNTRY$の支配者の後援のもとで、自身の言語学上の研究に身を捧げている。彼はアントーニオの回廊と呼ばれたアカデミーを創設し、若手学者ジョヴァンニ・ポンターノを王に紹介した。彼の偉大な知識は彼が優れた相談役になることを保証しており、新しい顧問としてアントーニオ・ベッカデッリを雇うことは賢明だろう。"
  flavor_ara.EVTOPTA3:0 "うん、彼を雇おう。"
  flavor_ara.EVTNAME4:0 "イオヴィアヌス・ポンタヌス"
- flavor_ara.EVTDESC4:0 "アントーニオ・ベッカデッリは、イオヴィアヌス・ポンタヌスまたはジョヴァンニ・ポンターノという名前の若い学者を$COUNTRY$の支配者に初めて紹介した。ジョヴァンニ・ポンターノはアルフォンソ5世の若い継承者を指導し、政治顧問、軍事秘書、首相を務めたが、彼は主に学者として名を馳せた。「王子の寛大さ、物凄さ、素晴らしさ」などの話題が彼によって論じられ、彼は建築物や素晴らしいモニュメントが偉大な支配者であるということの証であると主張した。彼は現代生活の事実と個人的感情の現実を、常にそして今だ人間の古典的な特徴である言葉で表現することができた。ウラニアは神話上のエピソードでの高度な話題で飾られており、当時の天文学を体現した彼の野心的で教訓的な6歩格の詩であった。彼はラテン語で書いており、彼の最も独創的な作詩は「夫婦愛、星座のエリダヌス座、墳丘墓、哀歌、バイアエ」といった個人的な話題に基づいており、彼の情熱的な感情は色とりどりで裏表のない暖かさで言い表された。"
+ flavor_ara.EVTDESC4:0 "アントーニオ・ベッカデッリは、イオヴィアヌス・ポンタヌスまたはジョヴァンニ・ポンターノという名前の若い学者を$COUNTRY$の支配者に初めて紹介した。ジョヴァンニ・ポンターノはアルフォンソ5世の若き継承者の家庭教師で、政治顧問、軍事秘書、首相を務めたが、彼は主に学者として名を馳せた。「王子の寛大さ、物凄さ、素晴らしさ」などの話題が彼によって論じられ、彼は建築物や素晴らしいモニュメントが偉大な支配者であるということの証であると主張した。彼は現代生活の事実と個人的感情の現実を、十分に古典的でありながら常にその人らしい言葉で表現することができた。ウラニアは神話のエピソードという崇高な話題で飾られた、当時の天文学を体現した彼の野心的で教訓的な6歩格の詩であった。彼はラテン語で書いており、彼の最も独創的な作詩は「夫婦愛、星座のエリダヌス座、墳丘墓、哀歌、バイアエ」といった個人的な話題に基づいており、彼の情熱的な感情は色とりどりで裏表のない暖かさで言い表された。"
  flavor_ara.EVTOPTA4:0 "彼は我々なしにはそれを行うことはできなかったろう！"
  flavor_ara.EVTOPTB4:0 "彼の成功は人々のそれだ。"
  flavor_ara.EVTNAME5:0 "サンタ・マリア・デ・シヘナ修道院"
