--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -631,7 +631,7 @@
  MEE_Byzantine_Events.34.a:0 "あいつらに自身の義務を思い出させろ。"
  MEE_Byzantine_Events.34.b:0 "あえて緊張を高めることなど出来ません。"
  MEE_Byzantine_Events.35.t:0 "ビザンツがオルハン・チェレビのための貢物を要求"
- MEE_Byzantine_Events.35.d:1 "ビザンツ帝国はわれわれが[151.GetName]に滞在しているオスマン帝国僭称者オルハン・チェレビのための貢物を続ける意思がないことに気づいている。われわれに脅しは効かない！とはいえ、間違った時期に内戦が起きれば、悲惨なことになりかねない。"
+ MEE_Byzantine_Events.35.d:1 "ビザンツ帝国は[151.GetName]に滞在しているオスマン帝国僭称者オルハン・チェレビのための貢物を続ける意思が我々にないことに気づいている。我々に脅しは効かない！とはいえ、間違った時期に内戦が起きれば、悲惨なことになりかねない。"
  MEE_Byzantine_Events.35.a:0 "やれるものならやってみるがいい。"
  MEE_Byzantine_Events.35.b:0 "いいだろう、金を払ってやれ！"
  MEE_Byzantine_Events.36.t:0 "オスマンが拒否"
@@ -2579,7 +2579,7 @@
  per_the_tofangchi_title:0 "トフェングチ連隊"
  per_the_tofangchi_desc:0 "剣、弓、馬は自国の軍事力に不可欠な要素であるが、戦術に新技術が生まれつつあるのは明らかだ。近隣勢力は既に、時流に乗ることができない、あるいは乗る気のない者たちを服従させるためにマスケット銃のような新たな武器を採用している。\nマスケット銃による戦闘に注力する軍事部門を創設せねばならない。"
  per_center_of_culture_title:0 "文化の中心地"
- per_center_of_culture_desc:1 "「文化」と「[Root.GetName]」は密接に関連している。アミールに向かって文化とは何か尋ねれば、彼らは我が[Root.GovernmentName]を指し示すだろう。学者に向かって芸術の中心はどこかと尋ねれば、彼らは[Root.Capital.GetName]を指し示すでだろう。"
+ per_center_of_culture_desc:1 "「文化」と「[Root.GetName]」は密接に関連している。アミールに向かって文化とは何か尋ねれば、彼らは我が[Root.GovernmentName]を指し示すだろう。学者に向かって芸術の中心はどこかと尋ねれば、彼らは[Root.Capital.GetName]を指し示すだろう。"
  per_checks_and_balance_title:0 "抑制と均衡"
  per_checks_and_balance_desc:1 "[Root.Monarch.GetTitle]の権力は、国務会議と大宰相によって保持されている。大宰相が異議を唱える限り、[Root.Monarch.GetTitle]のいかなる行動も無効になる。\nこのような政治様式は、階級にとっては利点があるが、統治者に権力を集権しようとする[Root.GovernmentName]にとっては最適ではない。[Root.Monarch.GetTitle]がそうであるのと同様、階級を確実に抑制せねばならない。"
  per_checks_and_balance_tt:0 "2§Y階級§!の影響力が§Y60§!以上あり、その他の階級の影響力が§Y40§!以上である。"
