--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -461,7 +461,7 @@
  LAR_hospitality:0 "ララキアの歓待"
  LAR_hospitality_desc:0 "見知らぬ人がララキア沿岸に現れると、友人であれ敵であれ、彼らの出自や目的を問わず、彼らは歓待され敬意をもって扱われる。マカッサルの交易商であれヨーロッパの入植者であれ、ララキアは常に安全な海岸を提供し、友人として歓迎される。"
  LAR_kenbi_land_claim:0 "ケンビの地の請求"
- LAR_kenbi_land_claim_desc:0 "入植者たちがオーストラリアの海岸にやって来て、ララキアの土地を不法に占拠、略奪した時、我々は彼らが理解できる唯一の言語で報復する。それは法の言語である。われわれは3メートルもの長い文書で、植民地企業が国際法に違反している理由を論拠と共に詳細に説明した。法を熟知すれば、自称入植者どもにとって手ごわい相手となる。"
+ LAR_kenbi_land_claim_desc:0 "入植者たちがオーストラリアの海岸にやって来て、ララキアの土地を不法に占拠、略奪した時、我々は彼らが理解できる唯一の言語で報復する。それは法の言語である。我々は3メートルもの長い文書で、植民地企業が国際法に違反している理由を論拠と共に詳細に説明した。法を熟知すれば、自称入植者どもにとって手ごわい相手となる。"
  GMI_ideas:0 "カミラロイのアイデア"
  GMI_ideas_start:0 "カミラロイの伝統"
  GMI_ideas_bonus:0 "カミラロイの宿願"
