--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -1436,7 +1436,7 @@
  nor_build_troops_title:0 "軍の拡大"
  nor_build_troops_desc:0 "デンマークとスウェーデンは、カルマル同盟の傘下にある間、自国の守護者なのかもしれないが、未来永劫頼るべき力ではない。野心的な隣人から国境を守るため、自国独自の軍が必要だ。"
  nor_restore_the_leidang_title:0 "レイザングの復活"
- nor_restore_the_leidang_desc:0 "レイザングとは、沿岸艦隊を編制して侵攻戦や防衛戦に備える特別な徴兵制度のことである。この制度は、農民から水兵を徴募し、平時においては夏の2、3ヶ月間の従軍を請け負わせるものだ。戦時においては、自由民は全員、自国の艦隊に従軍しなければならない。\nしかし、13世紀から15世紀にかけて、この制度は貴族を中心とした古典的な封建制に取って代わられた。\n封建制にはそれなりの魅力があるが、有能な水兵を徴募するという面では、レイザングによる徴兵とは勝負にならない。有能な船員確保のためにも、レイザング制を復活させるべきでだろう。"
+ nor_restore_the_leidang_desc:0 "レイザングとは、沿岸艦隊を編制して侵攻戦や防衛戦に備える特別な徴兵制度のことである。この制度は、農民から水兵を徴募し、平時においては夏の2、3ヶ月間の従軍を請け負わせるものだ。戦時においては、自由民は全員、自国の艦隊に従軍しなければならない。\nしかし、13世紀から15世紀にかけて、この制度は貴族を中心とした古典的な封建制に取って代わられた。\n封建制にはそれなりの魅力があるが、有能な水兵を徴募するという面では、レイザングによる徴兵とは勝負にならない。有能な船員確保のためにも、レイザング制を復活させるべきだろう。"
  nor_the_grand_norwegian_fleet_title:1 "王立海軍の拡張"
  nor_the_grand_norwegian_fleet_desc:0 "ある国では、外交で自身の意志を押し通す。他に、強力な軍隊による武力行使を好む国もある。\nその一方で、自国では海を利用し、海軍を利用して目的を達成する。しかし、そのためには、まず、自国の力を誇示できる海軍が必要だ。"
  upgrade_norwegian_doctrine:0 "より強力な海軍ドクトリン§Yノルウェー人水兵§!が解禁されます。"
@@ -3972,7 +3972,7 @@
  plc_the_obrona_potoczna:0 "オブロナ・ポトチュナ"
  plc_the_obrona_potoczna_desc:0 "我々が「継続防衛」と呼んでいるものは、実際には、君主が自身の財布から支払いを行っている常備軍のことである。彼らは伝統的に、コモンウェルスの利益に介入されぬよう、隣国との国境が明確に定まっていない紛争地域や場所に駐留している。やがて、この軍事部門は、ポーランド系、リトアニア系、ウクライナ系、外国系など、あらゆる種類の敵への対処法を知る、高度な訓練を受けた兵士や熟練の将軍を生み出してくれるだろう。"
  plc_refine_our_golden_liberty:0 "黄金の自由の改良"
- plc_refine_our_golden_liberty_desc:0 "自国の政治原則は、「自国は国王の監督の下にある共和国である」というものだ。この声明によって以下に述べる点について遵守している。全貴族による国王選挙、セイム、パクタ・コンヴェンタ、信仰の自由、保証された自由を侵害した王に対する反乱を起こすことの法的権利、リベルム・ヴェト、共通の政治目的を押し進めるたのめ政党の結成。我が共和国のこういった側面を明文化し、前進するにつれて新法や立法でそれらを洗練し続けることで、コモンウェルスは決して時代遅れになることも、政治停滞することもないでだろう。"
+ plc_refine_our_golden_liberty_desc:0 "自国の政治原則は、「自国は国王の監督の下にある共和国である」というものだ。この声明によって以下に述べる点について遵守している。全貴族による国王選挙、セイム、パクタ・コンヴェンタ、信仰の自由、保証された自由を侵害した王に対する反乱を起こすことの法的権利、リベルム・ヴェト、共通の政治目的を押し進めるたのめ政党の結成。我が共和国のこういった側面を明文化し、前進するにつれて新法や立法でそれらを洗練し続けることで、コモンウェルスは決して時代遅れになることも、政治停滞することもないだろう。"
  pol_royal_guards:0 "ポーランド近衛兵"
  pol_royal_guards_desc:0 "君主とその家族の保護に直接責任を有するポーランド近衛兵は、コモンウェルスの権力の頂点となるべく設立された。入手可能な最高の装備を備え、生涯を通じて様々な方法で訓練されたポーランド近衛兵は、将来的に自軍、特に歩兵を勇気づけるとともに鍛錬され、同時に君主とその家族を危険から守り続ける。"
  plc_tempered_by_neighbors:0 "隣国による鍛錬"
