--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -3191,8 +3191,8 @@
  desc_de_heretico_comburendo:0 "聖書の翻訳を所有したり作成したりすることは、火刑によって罰せられる法的犯罪である。"
  de_heretico_comburendo_act_title:0 "異端火刑法の可決"
  de_heretico_comburendo_act_desc:0 "聖書の翻訳の所有、または作成のいずれも、火刑によって処罰される不法な犯罪とする。"
- IS_NOT_PRODUCTION_LEADER:0 "我々は§Y$GOOD$§Wの最大生産国ではありません。\n"
- IS_PRODUCTION_LEADER:0 "我々は§Y$GOOD$§Wの最大生産国です。\n"
+ IS_NOT_PRODUCTION_LEADER:0 "我々が§Y$GOOD$§Wの最大生産国ではない\n"
+ IS_PRODUCTION_LEADER:0 "我々が§Y$GOOD$§Wの最大生産国である\n"
  HAS_PRODUCTION_BONUS:0 "追加ボーナスを得るのに十分な§Y$GOOD$§Wの交易を行っている\n"
  NOT_PRODUCION_BONUS:0 "追加ボーナスを得るのに十分な§Y$GOOD$§Wの交易を行っていない\n"
  WE_HAVE_TRADE_TRIGGER:0 "世界の§Y$GOOD$§W市場の§Y$VAL$§W%を利用できる。"
