--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -931,8 +931,8 @@
  CONVREL_KINGFORCED_DATE:0 "我々は宗教を変えることを余儀なくされていますが、少なくとも$DATE$までは宗教を変えることはできません。"
  CONFIRM_SETTLE:0 "定住"
  SECEDE_PROV_REDUCE_OPINION_AND_TRUST:0 "$ACTUALGIVER|Y$は$NEGOTIATORGIVER|Y$への評価を$OPINION|R$、信頼度を$TRUST|R$変化させます。"
- HAS_OR_BUILDING_FLAGSHIP:0 "国は旗艦を保有している、もしくは建造中です"
- HAS_NOT_OR_BUILDING_FLAGSHIP:0 "国は旗艦を保有していないし、建造中でもありません"
+ HAS_OR_BUILDING_FLAGSHIP:0 "国は旗艦を保有している、もしくは建造中である"
+ HAS_NOT_OR_BUILDING_FLAGSHIP:0 "国は旗艦を保有していないし、建造中でもない"
  GREAT_PROJECT_CANNOT_BE_MOVED:0 "$GREATPROJECT|Y$は大きすぎて移転できません。"
  CLAIM_STRENGTH_TOOLTIP:2 "$NAME|Y$の請求権の強さは$VAL|Y$です。これは、[Root.Heir.GetSheHe]が王位に就いたときの正統性となります。"
  CLAIM_STRENGTH_INCREASE_TOOLTIP:0 "請求権の強さは毎月$AMOUNT|Y$ずつ増加します。"
