Save/Update files [ci skip]

--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -1964,7 +1964,7 @@
  subutais_strategies_reform_desc:0 "スブタイは偉大なるチンギス・ハーンに仕えた将軍であり、軍事戦略家でもあった。彼の攻城兵器の使い方に関する教訓は伝説的なものであり、現在は我々の軍事ドクトリンの一部となっている。"
  ahmudan_system_reform:0 "アフムダン制"
  ahmudan_system_reform_desc:0 "アフムダン制（「王立軍務」）は、地方長官が前もって決められた数の兵を軍に供給する徴兵形態である。影響を受ける長官とその州は、軍の奉仕と引き換えに大半の税を免除される。"
- mechanic_ahmudan_system_yes:0 "戦争中、国家連隊コスト§G-10.0%§!および人的資源の回復速度§G+20.0%§!を獲得します。また、防衛戦争中ではさらに、陸軍士気§G+7.5%§!、要塞防御§G+15.0%§!および人的資源の回復速度§G+10.0%§!を獲得します。"
+ mechanic_ahmudan_system_yes:0 "戦争中、国家連隊コスト§G-10.0%§!および人的資源の回復速度§G+20.0%§!を獲得します。\nまた、防衛戦争中ではさらに、陸軍士気§G+7.5%§!、要塞防御力§G+15.0%§!および人的資源の回復速度§G+10.0%§!を獲得します。"
  ability_ahmudan_mechanic:0 "アフムダン制の相互作用"
  ghazi_reform:0 "ガーズィー戦士"
  ghazi_reform_desc:0 "ガーズィーは我が軍の前衛を確保する襲撃者である。支配者のために不信者と戦うガーズィー隊は、戦場に栄光と富と救いを求める者たちを惹きつける。"
