--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -232,15 +232,15 @@
  swabia_nation_desc:0 "古いシュヴァーベン公国は、1268年、最後のホーエンシュタウフェン家の公爵であるコンラディンの処刑で終わった。それ以来、ホーエンシュタウフェン家の凋落によって生じた空白を埋めるため、多数の小国、司教領、自由都市が出現した。しかし、これらの小さな国家は多くの場合、彼らの自由を守ることができず、結果として、オーストリアのハプスブルク家は、彼らが「前方オーストリア」と呼ぶかなりの領土をシュヴァーベンで築いてきた。この外国による侵入の形を終わらせるには、我々はシュヴァーベンの統一を回復しなければならない。"
  saxony_nation_title:0 "ザクセンを形成"
  saxony_nation_desc:0 "ザクセン公国は、王朝間で手を取り合い、何世紀にもわたって領土を随分と大きく変化させてきた。我々もそれを主張すべきだろうか？"
- has_adm_advisor_tooltip:0 "§Y統治§!顧問を採用している。"
- has_adm_advisor_2_tooltip:0 "スキル§Y2§!以上の§Y統治§!顧問を採用している。"
- has_adm_advisor_3_tooltip:0 "スキル§Y3§!以上の§Y統治§!顧問を採用している。"
- has_dip_advisor_tooltip:0 "§Y外交§!顧問を採用している。"
- has_dip_advisor_2_tooltip:0 "スキル§Y2§!以上の§Y外交§!顧問を採用している。"
- has_dip_advisor_3_tooltip:0 "スキル§Y3§!以上の§Y外交§!顧問を採用している。"
- has_mil_advisor_tooltip:0 "§Y軍事§!顧問を採用している。"
- has_mil_advisor_2_tooltip:0 "スキル§Y2§!以上の§Y軍事§!顧問を採用している。"
- has_mil_advisor_3_tooltip:0 "スキル§Y3§!の§Y軍事§!顧問を採用している。"
+ has_adm_advisor_tooltip:0 "§Y統治§!顧問を雇用している。"
+ has_adm_advisor_2_tooltip:0 "スキル§Y2§!以上の§Y統治§!顧問を雇用している。"
+ has_adm_advisor_3_tooltip:0 "スキル§Y3§!以上の§Y統治§!顧問を雇用している。"
+ has_dip_advisor_tooltip:0 "§Y外交§!顧問を雇用している。"
+ has_dip_advisor_2_tooltip:0 "スキル§Y2§!以上の§Y外交§!顧問を雇用している。"
+ has_dip_advisor_3_tooltip:0 "スキル§Y3§!以上の§Y外交§!顧問を雇用している。"
+ has_mil_advisor_tooltip:0 "§Y軍事§!顧問を雇用している。"
+ has_mil_advisor_2_tooltip:0 "スキル§Y2§!以上の§Y軍事§!顧問を雇用している。"
+ has_mil_advisor_3_tooltip:0 "スキル§Y3§!の§Y軍事§!顧問を雇用している。"
  has_completed_all_reforms_trigger_tooltip:0 "すべての政府改革を完了している。"
  has_been_insulted_by_root:1 "§Y[Root.GetName]§!から侮辱されている"
  new_flavour_bav.12.t:0 "インゴルシュタット：ビールの街？"
