Save/Update files [ci skip]

--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -266,7 +266,7 @@
  FRIEND_HEGEMON:0 "彼らがまだ我々を友だと思っていることを願おう！"
  GP_HEGEMON:0 "包囲網を結成する時だ"
  DEFAULT_HEGEMON_REACTION:0 "我々はこれについて非常に懸念している。"
- ANY_GP_COUNTRY_STARTS:0 "列強全て"
+ ANY_GP_COUNTRY_STARTS:0 "いずれかの列強"
  ANY_OTHER_GP_COUNTRY_STARTS:1 "他全ての列強"
  cb_hegemon:0 "覇権国の封じ込め"
  cb_hegemon_desc:0 "彼らを引きずり下ろしてやる！"
@@ -313,7 +313,7 @@
  cb_imperial_realm_war:1 "帝国戦争"
  cb_imperial_realm_war_desc:1 "神聖ローマ皇帝は、この国を攻撃することを正当と見なしています。"
  ASSIGN_HEIR_SOMEONE_ELSE_RULER:0 "同君連合の上位国ではないため、新しい後継者を指名できません！"
- ASSIGN_HEIR_NOT_WITH_FIXED_DYNASTY:0 "これは、特定の王朝によって支配されている国では不可能です。"
+ ASSIGN_HEIR_NOT_WITH_FIXED_DYNASTY:0 "固定王朝によって支配されている国では、これは不可能です。"
  ASSIGN_HEIR_TITLE:0 "新しい後継者を指名"
  ASSIGN_HEIR_DESC:0 "新しい後継者を指名すると$PRESTIGE|Y$の威信と$LEGITIMACY|Y$の正統性がかかります！本当によろしいですか？"
  ASSIGN_HEIR_ALREADY_HEIR:0 "すでに後継者がいます。"
