--- a/source/localisation/emperor_mercs_l_english.yml
+++ b/source/localisation/emperor_mercs_l_english.yml
@@ -84,7 +84,7 @@
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_LOG:1 "我々が雇用している$COMPANY$の傭兵団に新しい将軍が"
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_BTN1:0 "OK"
  HIRE_MERCENARY_COMPANY_INSTANT:0 "傭兵団$COMPANY|Y$は雇用可能です。"
- ANY_EMPLOYED_MERCENARY_COMPANY_TRIGGER:0 "雇用されている傭兵団"
+ ANY_EMPLOYED_MERCENARY_COMPANY_TRIGGER:0 "いずれかの雇用されている傭兵団"
  NOT_ANY_EMPLOYED_MERCENARY_COMPANY_TRIGGER:0 "雇用されていない傭兵団"
  TRIGGER_HOME_PROVINCE:0 "本拠地"
  TRIGGER_LOCATION:0 "現在地"
