--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -606,7 +606,7 @@
  dlc084_reason_we_rule_the_waves:0 "§YRule Britannia Immersion Pack§!は、革新性や産業革命といった新しいゲームシステムに加え、§Yイングランド§!と§Yグレートブリテン§!向けにカスタマイズされたミッションツリー、ユニットパックと音楽を追加します。"
  dlc084_reason_we_rule_the_waves_reason:1 "\nDLCで焦点が当てられている§Yイングランド§!あるいは§Yグレートブリテン§!を選択しているため、このDLCを推奨します。"
  dlc090_reason_generic:0 "§YDharma Expansion§!は、政府改革・強化された政策システム・交易会社投資・交易中心地のアップグレード機能といった新しいゲームシステムを追加します。"
- dlc090_reason_trade_companies:0 "§YDharma Expansion§!は強化された政府改革システムや、交易中心地のアップデート機能のような交易会社向けの新しいゲームシステムを追加します。"
+ dlc090_reason_trade_companies:0 "§YDharma Expansion§!は強化された政府改革システムや、交易中心地のアップグレード機能といった交易会社向けの新しいゲームシステムを追加します。"
  dlc090_reason_trade_companies_reason:1 "\n植民地帝国を達成するのに適した国家を選択しているため、このDLCを推奨します。"
  dlc090_reason_indian:0 "§YDharma Expansion§!は、カスタマイズされたミッションツリー・政府改革・階級といった§Yインド§!向けの新しいゲームコンテンツを追加します。"
  dlc090_reason_mughals:0 "§YDharma Expansion§!は、強化された政府改革や交易会社のシステムに加え、§Yムガル§!向けの固有の政体も追加します。"
