--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1190,7 +1190,7 @@
  kol_hanseatic_city:0 "ハンザ交易都市"
  kol_hanseatic_city_desc:0 "ケルンはライン川の中心に位置し、東西ヨーロッパと交易関係があることから、伝統的にハンザ同盟の主要な一員であった。イングランドとの交易や同盟での接触を通して、ケルンは大きく豊かな交易都市に発展した。さらなる成長を促すことで、今後も経済的に十分な利益を確保していくだろう！"
  kol_prime_minister:0 "ケルンの宰相"
- kol_prime_minister_desc:0 "司教区はケルンと同程度には広いので、その統治について多くの時間を要する。この領地を統治するため、大司教は精神面に関する職務を怠り、臣民の間に不幸をもたらしした。大司教の司教区の統治を委任される宰相の地位を確立することによって、大司教はケルンの住民の精神的に必要とするものに対し、より多くの時間を割けるようになるだろう。"
+ kol_prime_minister_desc:0 "司教区はケルンと同程度には広いので、その統治について多くの時間を要する。この領地を統治するため、大司教は精神面に関する職務を怠り、臣民の間に不幸をもたらした。大司教の司教区の統治を委任される宰相の地位を確立することによって、大司教はケルンの住民の精神的に必要とするものに対し、より多くの時間を割けるようになるだろう。"
  kol_pivotal_ecclesiastic_territory:0 "教会領の中枢"
  kol_pivotal_ecclesiastic_territory_desc:0 "選帝聖職侯として、また帝国最大の司教領の一つとして、ケルンは宗教戦争の中心人物である。我々の支援が、戦いの勝敗を握る鍵となりそうだ。この機会を利用して、ドイツ全土に正義と宗教的正しさを広めよう。"
  kol_shifting_alliances:0 "同盟の変化"
