--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -442,7 +442,7 @@
  PLW_writers:0 "アボリジニ初の書き手"
  PLW_writers_desc:0 "アボリジニの文化はよく口頭伝承や視覚芸術によって定義されるが、我々パラワは、先祖の遺産を保存し、民族の知識を共有する方法として、いち早く文字を採用した。我々の初期の作品には、島そのものに関する情報、自国の歴史、そしてパラワ語で書かれた素晴らしい詩の作品が含まれていた。文字を素早い習得は、我々パラワが新しい考えを受け入れ、変化する時代に合わせて古い伝統を変えることに長けていることをはっきりと示している。"
  PLW_survivors:0 "ブラック・ウォーの生存者"
- PLW_survivors_desc:0 "入植者がこの島に来たとき、彼らは自民族を根絶し、自領を奪おうとした。この争いは血生臭いものであり、この島の生物はほほぼ根絶やしにされてしまった。我々は優勢な敵に対して勇敢に戦った。例え銃口を頭に向けられても引き下がることを拒んだ。"
+ PLW_survivors_desc:0 "入植者がこの島に来たとき、彼らは自民族を根絶し、自領を奪おうとした。この争いは血生臭いものであり、この島の生物はほぼ根絶やしにされてしまった。我々は優勢な敵に対して勇敢に戦った。例え銃口を頭に向けられても引き下がることを拒んだ。"
  PLW_enduring:0 "我慢強い民族"
  PLW_enduring_desc:0 "外国の植民地軍との血みどろの紛争後、自国の遺産を継承するパラワ人はわずか4百人しか生き残っていなかった。長い年月を掛けて、元の人口に再び戻るまで人口を増やし始めるだろう。自民族が受けた傷は決して癒えることはないかもしれないが、最も血生臭い紛争からでさえも常に立ち上がり、一方的な紛争で失った人口を取り戻すことができるだろう。"
  LAR_ideas:0 "ララキアのアイデア"
