--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -161,7 +161,7 @@
  swe_swedish_allies_desc:0 "国民は独立を熱望しているが、自軍だけではデンマークからの解放を強要するには不十分かもしれない。スカンディナヴィア外でカルマル同盟の破滅を望んでいる同盟者を見つける必要がある。"
  swe_declare_independence_title:0 "独立宣言！"
  swe_declare_independence_desc:0 "ついに独立の時が来た！この無能なる連合を打ち破り、スウェーデンを支配するにふさわしい王位を創設しよう！"
- swe_declare_independence_ct:0 "§Y独立戦争§!に勝利した場合、ミッション「§Yドイツの海岸線§!」、「§Y東方への窓口§!」、「§Yヴァリャーグの遺産§!」に必要となる州すべてに恒久的な請求権が付与されるイベントが発生する。"
+ swe_declare_independence_ct:0 "§Y独立戦争§!に勝利した場合、イベントが発生し、ミッション「§Yドイツの海岸線§!」、「§Y東方への窓口§!」および「§Yヴァリャーグの遺産§!」に必要となる州すべてに恒久的な請求権が付与されます。"
  swe_claim_norwegian_crown_title:0 "ノルウェーの王位"
  swe_claim_norwegian_crown_desc:0 "カルマル同盟は、自国の独立によって機能不全に陥っているが、デンマークとノルウェー間は蜜月関係にあるため、未だに存続している。デンマーク王は否定したいようだが、ノルウェーはデンマーク政府から見ると、独自の本当の王国というより、ほぼ州のように見えている。ノルウェー人をデンマークの圧政から解放し、一度は思いやりのある君主に治めてもらうことが、良き隣人としての我が責務である。"
  swe_fall_of_denmark_title:0 "デンマークの陥落"
@@ -1196,7 +1196,7 @@
  dan_a_multicultural_kingdom_title:1 "[Root.GetPreviewColorDAN]多文化[Root.GovernmentName][Root.GetPreviewColorDAN_end]"
  dan_a_multicultural_kingdom_desc:0 "宗教的寛容さは一つの側面である。文化間寛容さもまた、自国が考えるべきことの一つだ。自国がこの暗い世界で啓蒙の道標になりたいのであれば、誰もが[Root.GetName]に歓迎されていることを示さねばならない－彼らの信仰や文化に関係なく。"
  flavor_dan.101.t:0 "エーリク・グリフの運命"
- flavor_dan.101.desc:0 "ポメラニアのエーリク・グリフは、かつてカルマル同盟の強大なる王でしたが、今ではゴットランドの都市ヴィスビューを併合したちっぽけな海賊でです。自国がゴットランド島をもう一度完全支配しましたから、彼の海賊としての時間はもうわずかです。さて、問題です。今、この恥さらしな王を一体どうしたらよいでしょう？"
+ flavor_dan.101.desc:0 "ポメラニアのエーリク・グリフは、かつてカルマル同盟の強大なる王でしたが、今ではゴットランドの都市ヴィスビューを併合したちっぽけな海賊です。自国がゴットランド島をもう一度完全支配しましたから、彼の海賊としての時間はもうわずかです。さて、問題です。今、この恥さらしな王を一体どうしたらよいでしょう？"
  flavor_dan.101.a:0 "ゴットランドから彼を追放せよ。"
  flavor_dan.101.b:0 "彼にゴットランドを統治させましょう。彼の海賊行為は役に立つかも。"
  flavor_dan.101.c:0 "海賊生活もいいかも…"
@@ -1816,7 +1816,7 @@
  teu_crusader_conquer_novgorod_title:1 "[Root.GetPreviewColorTEU]ノヴゴロドの征服[Root.GetPreviewColorTEU_end]"
  teu_crusader_conquer_novgorod_desc:0 "ノヴゴロドは異端である正教会の砦であり、我が兄弟のリヴォニア騎士団の直接目の前にいる。この汚らわしき商人共和国を滅ぼし、その領土を征服せねばならない。"
  teu_crusader_third_rome_title:1 "[Root.GetPreviewColorTEU]第三のローマの陥落[Root.GetPreviewColorTEU_end]"
- teu_crusader_third_rome_desc:0 "モスクワのロシア人は、自身をローマの後継者と呼ぶ大胆さを持ちあわせている。そんな愚かな称号について我々は気にしていない。しかし、彼らの積極的な異端の実践については気がかりだ。まさに善良なるキリスト信仰の冒涜である。この第三のローマと呼ばれているるものは、今日、我が手によって滅びるのだ！"
+ teu_crusader_third_rome_desc:0 "モスクワのロシア人は、自身をローマの後継者と呼ぶ厚かましさを持ちあわせている。そんな愚かな称号について我々は気にしていない。しかし、彼らが積極的に行っている異端的行為については気がかりだ。まさに善良なるキリスト信仰の冒涜である。この第三のローマと呼ばれているものは、今日、我が手によって滅びるだろう！"
  teu_crusader_third_rome_tt:0 "§Y[295.GetName]§!を領有している場合、イベント「§Y[295.GetName]の運命§!」が発生します。\nそれ以外の場合、外交力§G100§!を獲得します。"
  teu_crusader_end_the_schism_title:1 "[Root.GetPreviewColorTEU]シスマの終焉[Root.GetPreviewColorTEU_end]"
  teu_crusader_end_the_schism_desc:0 "あまりにも長い間、キリスト教は信仰における些細な違いで分裂してきた。教皇はそれを癒やす理由をほぼ見つけられず、ビザンツ帝国の愚か者たちはイスラム教徒の征服行為に手一杯だった。この分裂を癒やし、この異端を終わらせるのは、自国次第である。"
@@ -2760,7 +2760,7 @@
  nor_sca_kingdom_on_sea_desc:0 "自国はいつも海とかなり密接な繋がりを持っていた。自国の誕生以来、我々は海に生き、海に死んできた。そして今、自国はその揺るぎない支配者となるのだ！"
  admirals_give_army_professionalism_tt:0 "提督の雇用時、軍熟練度が §G0.5%§!増加する。"
  nor_sca_a_mighty_fleet_title:0 "強力な艦隊"
- nor_sca_a_mighty_fleet_desc:0 "ブリテン諸島のブリテン人、低地地方のオランダ人、イベリア半島のポルトガル人とスペイン人ー彼らはみな優れた水兵であり、比類のない海軍を築いた。自国も彼らに倣い、海軍の軍質を再定義するようなな強大な艦隊を築き上げるのだ。"
+ nor_sca_a_mighty_fleet_desc:0 "ブリテン諸島のブリテン人、低地地方のオランダ人、イベリア半島のポルトガル人とスペイン人ー彼らはみな優れた水兵であり、比類のない海軍を築いた。自国も彼らに倣い、海軍の軍質を再定義するような強大な艦隊を築き上げるのだ。"
  nor_sca_a_mighty_fleet_tt:0 "§Y[Root.GetName]§!以上に多くの艦隊を有する国家が存在しない。"
  nor_sca_handle_the_sami_title:0 "サーミ人の統合"
  nor_sca_handle_the_sami_desc:0 "サーミ人は北部の密林で居住する民族である。その地は他のスカンディナヴィア人ースウェーデン人、ノルウェー人、デーン人ーが住んでいない地だ。彼らは自身の領域外の世界と交易することもなく、完全に孤立している。しかし、彼らは公的には我が領内に住んでいることになる。この森から恩恵を受けることができるよう、彼らを自国の社会に取り込むべきだろう。"
@@ -4410,7 +4410,7 @@
  hsa_has_at_least_75_vessels:0 "§Y75§!隻以上の艦船を有している"
  hsa_imperial_favor_tt:0 "§Y神聖ローマ帝国§!の我々への評価が§Y100§!以上の場合、彼らに影響を与えて、§Yホルシュタイン§!に中核を獲得します。"
  hsa_reduce_denmark_trade_tt:1 "デンマークのホルシュタインでの敗北は、§Yリューベック§!市場周辺の彼らの保持に§G悪影響§!をもたらすでしょう"
- hsa_till_it_gets_sunk_desc:0 "自身の§Y旗艦§!を沈むか捕獲されるるまで"
+ hsa_till_it_gets_sunk_desc:0 "我々の§Y旗艦§!が沈むか捕獲されるまで"
  hsa_largest_fleet_from_rivals_or_naval_ideas_tt:1 "全ての§Yライバル§!国より多くの艦船を有しているか§Y海軍§!アイデアをコンプリートしている"
  hsa_enacted_adler_von_lubeck_decision_tt:0 "国家の決断「§Yアドラー・フォン・リューベック§!」を制定している"
  hsa_sell_danzig_to_the_hansa_for_250_ducats_and_benefits_tt:0 "この州は総額250¤の販売と強力な交易ボーナスを§Y15§!年間獲得する"
