--- a/source/localisation/winds_of_change_l_english.yml
+++ b/source/localisation/winds_of_change_l_english.yml
@@ -61,7 +61,7 @@
  estate_burghers_livestock_regulations:0 "家畜の規則"
  estate_burghers_livestock_regulations_desc:0 "クリミアの土地は家畜小屋で埋め尽くされている。家畜の所有者を規制することで家畜の動きを統制し、家畜が私たちの土地の外に移動しないようにすることができる。"
  FEO_SELECTING_DOCTRINE_GIVES_BLACK_SEAS_FLEET_MODIFIER:0 "\n海軍ドクトリンを選択すると、§Y15§!年間§Y黒海艦隊§!を獲得し、以下の効果を得ます：\n　§G+10.0%§! ガレー船戦闘能力\n　§G-10.0%§! 海軍維持費補正"
- FEO_UNLOCK_LIVESTOCK_REGULATIONS_RIVILEGE_TT:0 "§Y市民§!階級特権§Y家畜規制§!を解禁し、以下のボーナスが与えられます：\n　§G+15%§! 家畜生産州での交易品生産補正"
+ FEO_UNLOCK_LIVESTOCK_REGULATIONS_RIVILEGE_TT:0 "§Y市民§!階級特権§Y家畜規制§!が解禁されます。この特権の効果：\n　§G+15%§! 家畜生産州での交易品生産補正"
  FEO_IF_COMPLETED_THROUGH_ALLIANCE:0 "@[TRE.GetTag] §M[TRE.GetName]§!との§M同盟§!によってミッションが達成された場合："
  FEO_IF_COMPLETED_THROUGH_VASSAL:0 "@[TRE.GetTag] §M[TRE.GetName]§!の§M属国化§!によってミッションが達成された場合："
  FEO_IF_COMPLETED_THROUGH_CONQUEST:0 "§M[330.GetName]§!の州の§M征服§!によってミッションが達成された場合："
@@ -940,7 +940,7 @@
  ITA_double_certain_trade_goods_trading_in_bonus:1 "§Y[Root.GetBurghersName]§!の階級特権「§Yラテン商人の支援§!」が強化され、以下の§Y交易品§!を交易するかどうかに応じて追加の補正が付与されるようになります：\n§M綿花§!：§G+10.00§! 国家の入植者の増加\n§M砂糖§!：§G-15.0%§! 戦争疲弊削減コスト\n§Mタバコ§!：§G+1.00§! 外交評判\n§Mココア§!：§G-10.0%§! 顧問コスト"
  ITA_scaling_spices:1 "この特権は以下の§Y交易品§!を交易するかどうかに応じて追加の補正が付与されるようになります：\n§M綿花§!：§G+10.00§! 国家の入植者の増加\n§M砂糖§!：§G-15.0%§! 戦争疲弊削減コスト\n§Mタバコ§!：§G+1.00§! 外交評判\n§Mココア§!：§G-10.0%§! 顧問コスト"
  ITA_trade_good_benefits:0 "§Y香辛料§!の市場占有率§Y4.0%§!ごとに交易誘導が§G+1.0%§!されます。"
- ITA_estate_privilege_for_colonization:0 "§Y[Root.GetBurghersName]§!の階級特権「§Y商人による植民の許可§!」が解禁され、§Y植民§!関連アイデアの有無に応じて異なる補正を付与します。\n\n§Y植民§!関連アイデアを保有している場合、国家の入植者の増加§G+25.00§!と交易誘導§G+5.0%§!を獲得します。\n\n§Y植民§!関連アイデアを保有していない場合、植民者を§G+1.00§!獲得し、入植可能性に§R-5.0%§!のペナルティを受けます。"
+ ITA_estate_privilege_for_colonization:0 "§Y[Root.GetBurghersName]§!の階級特権「§Y商人による植民の許可§!」が解禁されます。この特権は§Y植民§!関連アイデアの有無に応じて補正を付与します。\n\n§Y植民§!関連アイデアを保有している場合、国家の入植者の増加§G+25.00§!と交易誘導§G+5.0%§!を獲得します。\n\n§Y植民§!関連アイデアを保有していない場合、植民者を§G+1.00§!獲得し、入植可能性に§R-5.0%§!のペナルティを受けます。"
  ITA_cb_for_america:0 "§Y北アメリカ§!、§Y南アメリカ§!、および§Y新世界§!に州を領有する国々に対して、開戦事由「§Yアメリカ争奪§!」を解禁します。この開戦事由を使用して領土を獲得するときには§Y外交点§!は消費されませんが、侵略的拡大が§R+25.0%§!増加します。"
  cb_ita_scramble_for_america:0 "アメリカ争奪"
  cb_ita_scramble_for_america_desc:0 "アメリカの最初の土地を主張するのは遅かったが、代わりに外国の土地を請求すればよい。"
@@ -2102,9 +2102,9 @@
  NED_DUTCH_URBANIZATION_TOOLTIP:0 "条件を満たした§Y低地諸国§!にある領有州もしくは将来の州は以下を得ます："
  NED_MODIFY_BURGHERS_IN_THE_ADMIRALITY_TOOLTIP:0 "特権§Y海軍本部内の市民§!は海軍伝統を必要としなくなり、提督の機動最大値を§G+1.00§!獲得します。"
  NED_GRANT_DUTCH_ADMIRALITY_CONDITIONAL_MODIFIERS:1 "§Y[97.GetName]§!、§Y[4383.GetName]§!、§Y[96.GetName]§!、§Y[100.GetName]§!は条件付き補正§Y五つのオランダ海軍本部§!を獲得します。これにより市民の忠誠度が§G60%§!以上であれば年間海軍伝統を§G+0.15§!獲得します。"
- NED_UNLOCK_BLACK_DEVILS_PRIVILEGE_FOR_BURGHERS:1 "§Y[Root.GetBurghersName]§!の特権§Y黒い悪魔§!が解禁され、以下の効果が得られます：\n　陸戦の射撃ダメージ：§G+10.0%§!\n　被白兵ダメージ：§G-10.0%§!\n　海兵隊扶養限界：§R-10.0%§!\n　§Y海兵連隊にのみ影響します§!"
- NED_UNLOCK_MAXIMIZE_CARGO_SPACE_PRIVILEGE:1 "§Y[Root.GetBurghersName]§!の特権§Y荷室の最大化§!が解禁され、以下の効果を得ます：\n　艦砲：§R-25.0%§!\n　船の交易力補正：§G+50.0%§!\n　§YVOCインディアマンのみに影響します§!"
- NED_UNLOCK_DIVERSIFY_FLUYTS_PRIVILEGE:1 "§Y[Root.GetBurghersName]§!の特権§Yフリュートの多様化§!が解禁され、以下の効果を得ます：\n　艦砲：§G+10.0%§!\n　船の交易力補正：§R-30.0%§!\n　船体幅：§G+15.0%§!\n　船舶コスト：§R+30.0%§!\n　§YVOCインディアマンのみに影響します§!"
+ NED_UNLOCK_BLACK_DEVILS_PRIVILEGE_FOR_BURGHERS:1 "§Y[Root.GetBurghersName]§!の特権§Y黒い悪魔§!が解禁されます。この特権の効果：\n　陸戦の射撃ダメージ：§G+10.0%§!\n　被白兵ダメージ：§G-10.0%§!\n　海兵隊扶養限界：§R-10.0%§!\n　§Y海兵連隊にのみ影響します§!"
+ NED_UNLOCK_MAXIMIZE_CARGO_SPACE_PRIVILEGE:1 "§Y[Root.GetBurghersName]§!の特権§Y荷室の最大化§!が解禁されます。この特権の効果：\n　艦砲：§R-25.0%§!\n　船の交易力補正：§G+50.0%§!\n　§YVOCインディアマンのみに影響します§!"
+ NED_UNLOCK_DIVERSIFY_FLUYTS_PRIVILEGE:1 "§Y[Root.GetBurghersName]§!の特権§Yフリュートの多様化§!が解禁されます。この特権の効果：\n　艦砲：§G+10.0%§!\n　船の交易力補正：§R-30.0%§!\n　船体幅：§G+15.0%§!\n　船舶コスト：§R+30.0%§!\n　§YVOCインディアマンのみに影響します§!"
  NED_COMPLETED_AMSTERDAM_BOURSE_MISSION:0 "ミッション「§Yアムステルダム証券取引所§!」を達成済みである。"
  NED_UNLOCK_BOURSE_CONDITIONAL_MODIFIER:0 "大事業§Yアムステルダム証券取引所§!の条件付き補正が解禁されます。"
  NED_HAD_DUTCH_REPUBLIC_EVENT:0 "イベント§Y立憲主義と一般階級§!が発生した。"
@@ -5225,7 +5225,7 @@
  voc_2:0 "分割統治"
  voc_2_desc:0 "数多くのインドスルタンが、征服と支配の両面で我々に問題を突きつけている。その両方を達成しようとすれば、分割して別々に征服しなければならない。"
  voc_3:0 "異国の地の開発"
- voc_3_desc:0 "我々は交易のためだけにここにいるのだが、自由に使える土地がヨーロッパに比べて不足している。我々ははその土地を必ず拡大しなければならない"
+ voc_3_desc:0 "我々は交易のためだけにここにいるのだが、自由に使える土地がヨーロッパに比べて不足している。我々はその土地を必ず拡大しなければならない"
  voc_4:0 "東インド諸島の拡大"
  voc_4_desc:0 "我々はインド総督の称号を与えられたが、そこで野心を止めてはならない。我々は東インド諸島の会社であり、我々の主張はアジア全域に広がっている。"
  voc_5:0 "交易のための造船所"
@@ -5938,7 +5938,7 @@
  MUG_random_province_in_required_area_will_get_2_manpower:0 "§Y必要な地域§!のランダムな州は、基本人的資源を§G+2§!します。"
  MUG_move_capital:1 "このイベントによって、州へ§Y首都§!を無償で遷都することができます。さらにそれぞれの開発度に§G+1§!が与えられます。首都を遷都せず、それぞれの開発度に§G+2§!を与えることもできます。"
  MUG_disable_sinner:1 "自国の統治者、配偶者、後継者は神となり、罪を犯すことはないので、特性§Y罪人§!を獲得することはありません。"
- MUG_promote_din_i_ilahi:0 "§Y[Root.GetClergyName]§!の階級特権「§Y神聖宗教の推進§!」が解禁されます。最大絶対主義§G+10.00§!と、§Y[Root.GetClergyName]§!階級の忠誠均衡値§R-10%§!を消費して年間絶対主義§G+1.00§!と、宗教統一度§R-10.0%§!を与えます。"
+ MUG_promote_din_i_ilahi:0 "§Y[Root.GetClergyName]§!の階級特権「§Y神聖宗教の推進§!」が解禁されます。この特権は、最大絶対主義§G+10.00§!と§Y[Root.GetClergyName]§!階級の忠誠均衡値§R-10%§!を引き換えに、年間絶対主義§G+1.00§!と、宗教統一度§R-10.0%§!を与えます。"
  MUG_remove_stab_cost_penalty:0 "「§Yイバダット・カーナ§!」の補正から§Y安定度コスト補正§!ペナルティを取り除きます。"
  MUG_may_establish_viceroyalty_decision_tt:0 "決断「§Yデカンの総督職§!」が解禁されます。統治効率§G+5.0%§!と引き換えに、南インドに @DEC §Y[DEC.GetName]§!を解放できます。"
  merc_mug_elite_gurkhas:0 "§J精鋭グルカ兵§!"
