--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -2269,7 +2269,7 @@
  CENSUS:0 "人口調査"
  appanages_event.1.t:0 "元アパナージュ貴族の憤激"
  appanages_event.1.desc:0 "自身の従属国の一つを併合したことで、この地の貴族たちは[Root.GetUsableName]内での新しい立場に対し、不満と怒りを見せています。かつて称号と土地の保持者だった彼らは、今ではただの[Root.Monarch.GetTitle]に仕える別の臣民に過ぎません。"
- appanages_event.1.a:0 "時間が経てば、自分の立場を受け入れるだろ。"
+ appanages_event.1.a:0 "時間が経てば、自分の立場を受け入れるだろう。"
  equipped_streltsy_modifier_weaker:0 "ストレリツィの配備"
  equipped_streltsy_modifier:0 "ストレリツィの配備"
  prepared_streltsy_modifier:0 "準備済みのストレリツィ"
@@ -3628,7 +3628,7 @@
  estate_cossacks_grant_military_leadership:0 "[Root.GetCossacksName]の軍事的指導"
  estate_cossacks_grant_military_leadership_desc:1 "[Root.GetCossacksName]は優れた戦士と指導者だ。彼らに自軍の軍事顧問として頭角を表す機会を与えるべきなのはごくごく当然だ。"
  estate_cossacks_military_service:0 "[Root.GetCossacksName]の兵役"
- estate_cossacks_military_service_desc:0 "彼らの文化が戦闘に注力しているため、[Root.GetCossacksName]は不正規部隊として[Root.GetAdjective]軍に仕え、る騎兵部隊として歩兵と砲兵を支援する。"
+ estate_cossacks_military_service_desc:0 "彼らの文化が戦闘に注力しているため、[Root.GetCossacksName]は非正規部隊として[Root.GetAdjective]軍に仕え、騎兵部隊として歩兵と砲兵を支援している。"
  estate_cossacks_expand_cossacks_raiders:0 "[Root.GetCossacksName]の襲撃の公認"
  estate_cossacks_expand_cossacks_raiders_desc:0 "厳密に言うと、[Root.GetCossacksName]は[Root.GetName]市民であり、従って、自国の法に従わなければならない。実際には、ステップは例えば法律などのような概念にほぼ関心がない。[Root.GetCossacksName]は、彼らと国境を接する不幸者から必要なものを奪う。\n彼らの行動を合法化し、外国に対する彼らの襲撃を自国自身の責任としたならば、彼らに大きな便宜を図って上げることになるだろう。"
  estate_cossacks_expand_cossacks_raiders_gt:0 "イベント「§Yコサックの侵略§!」は今や§Y[Root.GetName]§!に対しさらなるボーナスをもたらします。"
@@ -3639,7 +3639,7 @@
  estate_nomadic_tribes_autonomy_of_the_tribes:0 "[Root.GetTribesName]の自治権"
  estate_nomadic_tribes_autonomy_of_the_tribes_desc:0 "自領は広大だが、インフラはまばらだ。ステップを支配し続けるため、[Root.GetTribesName]にのために彼らの領土を統治する自治権を与えねばならない。"
  estate_nomadic_tribes_freedom_of_the_steppes:0 "[Root.GetTribesName]のステップでの自由"
- estate_nomadic_tribes_freedom_of_the_steppes_desc:0 "ステップは広い。定住文明とは無縁のステップが我々の本拠である。[Root.GetUsableName]本拠であ。[Root.GetTribesName]の本拠でもある。全員ステップの自由を享受するのだ。"
+ estate_nomadic_tribes_freedom_of_the_steppes_desc:0 "ステップは広い。定住文明とは無縁のステップが我々の本拠である。[Root.GetUsableName]の本拠であり、[Root.GetTribesName]の本拠でもある。全員ステップの自由を享受するのだ。"
  estate_nomadic_tribes_freedom_of_the_steppes_gt:0 "領有する§Yステップ§!の州はすべて、以下のボーナスを得ます："
  estate_nomadic_tribes_freedom_of_the_steppes_rt:0 "補正「§Yステップ部族の自由§!」が§Yステップ§!全てで削除されます。"
  estate_nomadic_tribes_freedom_of_the_steppes_mod:0 "ステップ部族の自由"
@@ -4930,7 +4930,7 @@
  gbr_trade_dominance_in_europe_desc:0 "新世界からの多くの交易品が自国の海峡へと流入しているが、それはヨーロッパで利益を上げる唯一の交易拠点ではない。ヨーロッパで自国の存在感を広げることは、ヨーロッパの商業支配を確保するだろう。"
  gbr_trade_dominance_in_europe_at:0 "§Yヨーロッパ§!内にある交易ノード：\n　§Y[Root.GetName]§!が§Y30%§!以上の交易力を有する。\n　§Y[Root.GetName]§!が最大の交易力を有する国家である。"
  gbr_sail_around_africa_title:1 "[Root.GetPreviewColorGBR]アフリカ巡りの航海[Root.GetPreviewColorGBR_end]"
- gbr_sail_around_africa_desc:0 "希望峰の先には一体どどんな驚異が待っているだろうか？"
+ gbr_sail_around_africa_desc:0 "希望峰の先には一体どんな驚異が待っているだろうか？"
  gbr_sail_around_africa_ct:0 "アフリカ周辺を航海した"
  gbr_seize_the_cape_title:1 "[Root.GetPreviewColorGBR]ケープの奪取[Root.GetPreviewColorGBR_end]"
  gbr_seize_the_cape_desc:0 "希望峰は、東インド諸島への航路において重要な中継地点である。疑いの余地などない、希望峰を制する者は他の列強のアジアへの野心も制する。\n希望峰は自国のものでなければならない！"
