--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -697,7 +697,7 @@
  NEW_ACHIEVEMENT_99_DESC:0 "ロシアで、中華皇帝と神聖ローマ帝国皇帝を兼任する。"
  NEW_ACHIEVEMENT_100_NAME:0 "老いたテルシオのための国ではない"
  NEW_ACHIEVEMENT_100_DESC:0 "スペインで、改革テルシオを33ユニット有し、列強の首都を3か所同時に支配する。"
- NEW_ACHIEVEMENT_101_NAME:0 "みんな真っ青"
+ NEW_ACHIEVEMENT_101_NAME:0 "オールブルー"
  NEW_ACHIEVEMENT_101_DESC:0 "ポルトガルで、全ヨーロッパを自国または1444年時点で存在する青色のヨーロッパ国家で領有する。"
  NEW_ACHIEVEMENT_102_NAME:0 "スターダストクルセイダース"
  NEW_ACHIEVEMENT_102_DESC:1 "日本で、パレスチナおよびカイロが支配下にあり、改革「キリシタン太陽の地」を有する。"
