--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -311,14 +311,14 @@
  seven_cities_events.409.d:0 "我らがコンキスタドールは黄金を送ってはこなかったものの、新たな領土に関する見事で詳細な地図を送り返してきた。これら無主の地は、自らの運命を懸ける勇敢な入植者をこそ待ち受けているのだ…"
  seven_cities_events.409.a:0 "黄金は無かったが、驚くべき良い知らせだ。"
  seven_cities_events.410.t:0 "放棄された古墳"
- seven_cities_events.410.d:0 "遠くから、コンキスタドールたちは、それらを$PROVINCENAME$の人の住んでいない平原の中にある単なる丘であると考えていた。しかし、我々がより近づくにつれて、一行の意欲的な仲間は、それらがどれほど規則的であるかに気付き、すぐに彼は仲間に、古代の人々の偉大なピラミッドの残骸に違いないと指摘した。"
+ seven_cities_events.410.d:0 "遠目には、それらを$PROVINCENAME$の何もない平原の中にある単なる丘であるようにしかコンキスタドールには見えなかった。しかし、我々がより近づくにつれて、一行の意欲的な仲間は、それらがどれほど規則的であるかに気付き、すぐに彼は仲間に、古代の人々の偉大なピラミッドの残骸に違いないと指摘した。"
  seven_cities_events.410.a:0 "丘の中に黄金が埋まっているに違いない！今すぐ掘り出せ！"
  seven_cities_events.410.b:0 "そのままにしておけ。どうせ地下には何もない。"
- seven_cities_events.411.t:0 "ただ、汚れだけ"
- seven_cities_events.411.d:0 "古代人の偉大なピラミッドの残骸であると思っていた「進歩的な仲間」たちは間違っていたようであり、それらは単なる丘であった。すべての探検で発見されたのは汚れだけであった。"
+ seven_cities_events.411.t:0 "ただ、土だけ"
+ seven_cities_events.411.d:0 "古代人の偉大なピラミッドの残骸であると思っていた「進歩的な仲間」たちは間違っていて、それは単なる丘に過ぎなかった。探検で発見されたのは土だけであった。"
  seven_cities_events.411.a:0 "がっかりだ！"
  seven_cities_events.412.t:0 "わずかな量の金"
- seven_cities_events.412.d:0 "丘は古代人の偉大なピラミッドの残骸であり、探検隊はそれほど汚れていないいくつかの金を発見した。探検隊の仲間たちはこれが時間の無駄だと信じているが、我々もそれに同意する。"
+ seven_cities_events.412.d:0 "丘は古代人の偉大なピラミッドの残骸であり、探検隊は土の中からいくつかの金を発見した。探検隊の仲間たちはこれが時間の無駄だと信じているが、我々もそれに同意する。"
  seven_cities_events.412.a:0 "そこそこ金を得たから、良しとしよう。"
  seven_cities_events.413.t:0 "ドラゴンの住処"
  seven_cities_events.413.d:0 "川を見下ろす巨大な岩の岩壁画はほとんど色あせているが、それが示す、6本足の怪物はまだ見ることができる。原住民は、祖先が退治したというドラゴンのような怪物の空想的な物語を我々に語ってくれるが、彼らのうちの何人かは、絵画は我々がさらに進むべきではないという警告であると、狼狽しながら主張している。確かなのは、原住民の案内人のすべてが、我々が通り過ぎる際に、壁画に向かって武器を発射するよう主張していることである。"
@@ -950,7 +950,7 @@
  inti_events.17.a:0 "ミトマックの帰還を許可する。"
  inti_events.17.b:0 "彼らがいる場所で、彼らは必要とされている。"
  inti_events.18.t:0 "[Root.GetName]で不穏をかき立てる聖職者"
- inti_events.18.d:0 "[Root.GetName]の少数派のワカ神の聖職者は、我々が徐々にインティの権威を高めようとしており、ワカのすべての神々の権威を疎外していると語ることで、我々の支配に対する意見を扇動しようとしていいる。幸運なことに、我々の国民の大半は、これらの手に負えない告発に耳を傾けるよりも、より良いものを理解しているが、[Root.GetName]の部族の一人は聖職者を支持しており、今は彼らの神とその民の安全のために我々が保証を与えることを要求している。"
+ inti_events.18.d:0 "[Root.GetName]の少数派のワカ神の聖職者は、我々が徐々にインティの権威を高めようとしており、ワカのすべての神々の権威を疎外していると語ることで、我々の支配に対する意見を扇動しようとしている。幸運なことに、我々の国民の大半は、これらの手に負えない告発に耳を傾けるよりも、より良いものを理解しているが、[Root.GetName]の部族の一人は聖職者を支持しており、今は彼らの神とその民の安全のために我々が保証を与えることを要求している。"
  inti_events.18.a:0 "これらの人々が、ミトマックのように移住する時だ。"
  inti_events.18.b:0 "地元の聖職者に保証を与える。"
  inti_events.18.c:0 "これらの聖職者は、毒蛇を入れた穴に放り込むのがお似合いだ。"
