--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -872,7 +872,7 @@
  sio_between_the_rivers:0 "河川の間"
  sio_between_the_rivers_desc:0 "ミネソタ川とミズーリ川は自国を潤している。その水は大地に繁栄を及び自国の平穏をもたらし、我々が必要とする全てを提供することが分かる。"
  sio_trade_fairs:0 "見本市"
- sio_trade_fairs_desc:0 "自国の商人は、他部族との見本市に参加したり開催したりするために、遠くまで出かけていいく。商業的な関係は、自国の欲求を確保する有効な手段だ。"
+ sio_trade_fairs_desc:0 "自国の商人は、他部族との見本市に参加したり開催したりするために、遠くまで出かけていく。商業的な関係は、自国の欲求を確保する有効な手段だ。"
  sio_oyate:0 "オヤーテ"
  sio_oyate_desc:0 "人は一人では生きられないし、もし生きていけたとしても、それは人生とは呼ばないだろう。オヤーテとは部族であり、所属する場所だ。オヤーテの中には、保護と助言がある。"
  sio_until_death_and_after:0 "死ぬまでと死後"
