--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -421,7 +421,7 @@
  flavor_swe.123.desc:0 "「ヴァリャーグ」ーギリシャ語でスカンディナヴィアのヴァイキングを指し、8世紀後半に自国の祖先がコンスタンティノープルへと向かう際、東ローマ人によって名付けられました。彼らは「ヴァリャーグからギリシアへの道」と呼ばれる、ドニエプル川沿いを辿る経路からやって来ました。\n\nこの経路中にある重要都市の多くが、現在自国の手中にあるか、同盟国の領土となっており、この歴史的な通商路は再び動いているのです！"
  flavor_swe.123.a:0 "素晴らしい！"
  flavor_swe.124.t:0 "ポーランドの王位"
- flavor_swe.124.desc:0 "自国の支配者一族がスウェーデン支配を正当化する一方で、[Root.GetName]の貴族たちは南にある隣国、ポーランド王国に目を向けていいます。スカンディナヴィアの統合、ロシアを通過する経路の次として、ポーランドは自国にとって直近の拡大路線です。しかし、貴族全員がその話に同意しているわけではなく、南にある強力なポーランドの同盟国がもたらす価値を強調しています。また、[Root.Monarch.Dynasty.GetName]王朝の一人をポーランド王位に就かせて、同君連合とすることも可能だろうと指摘する者もいます。\n結局、[Root.GetAdjective]とポーランドの関係をどうするかについては、[Root.Monarch.GetName]の決断次第です。"
+ flavor_swe.124.desc:0 "自国の支配者一族がスウェーデン支配を正当化する一方で、[Root.GetName]の貴族たちは南にある隣国、ポーランド王国に目を向けています。スカンディナヴィアの統合、ロシアを通過する経路の次として、ポーランドは自国にとって直近の拡大路線です。しかし、貴族全員がその話に同意しているわけではなく、南にある強力なポーランドの同盟国がもたらす価値を強調しています。また、[Root.Monarch.Dynasty.GetName]王朝の一人をポーランド王位に就かせて、同君連合とすることも可能だろうと指摘する者もいます。\n結局、[Root.GetAdjective]とポーランドの関係をどうするかについては、[Root.Monarch.GetName]の決断次第です。"
  flavor_swe.124.a:0 "「ポーランド[Root.Monarch.GetTitle]」…気に入った。"
  flavor_swe.124.a.tt:1 "§Y[GetPolandPLC]§!との§Y王朝による繋がり§!を重視する方針を取ります。これによって、ミッション「§Yポーランド王国§!」の条件と報酬が以下の通りに変更されます：\n条件：\n§Y[GetPolandPLC]§!の支配王朝が§Y[Root.Monarch.Dynasty.GetName]§!であり、威信と正統性が§Y[GetPolandPLC]§!以上である。\n報酬：\n§Y[Root.GetName]§!は§Y[GetPolandPLC]§!に対して開戦事由§Y連合の回復§!を獲得します。"
  flavor_swe.124.b:0 "旧来の方法で征服してしまおう。"
@@ -2995,7 +2995,7 @@
  got_republic_strong_mercantilism_title:0 "強力な重商主義"
  got_republic_strong_mercantilism_desc:0 "バルト海の交易を真に支配するには、内部派閥を喜ばせ、有能な顧問が自国の利益を最大化できるような地位を確保せねばならない。"
  got_republic_dominate_commerce_title:0 "ゴットランド交易帝国"
- got_republic_dominate_commerce_desc:0 "我が強大な商業帝国は、バルト海の交易と権力を独占する態勢を整えている。自国の商人に認められていいない者はバルト海にいてはいけないのだ！"
+ got_republic_dominate_commerce_desc:0 "我が強大な商業帝国は、バルト海の交易と権力を独占する態勢を整えている。自国の商人に認められていない者はバルト海にいてはいけないのだ！"
  got_republic_dominate_commerce_tt:0 "§Y[Root.GetName]§!が持つ永続補正を別のものと置き換えることができる決断が解禁されます。"
  got_republic_mercenaries_title:0 "傭兵の雇用"
  got_republic_mercenaries_desc:0 "我が[Root.GetAdjective]の国民は自国に誇りを持ち、最後の一人となっても国を守るが、それでも我々はただの島国だ。スカンディナヴィアからの脅威から身を守るには、熟練の兵士が必要である。有能な傭兵が必要だ！"
